# mc_simulation

./: CMakeLists.txt  README.md
cpp/include/: biotissue.h  coordinate.h  layer.h  mc_method.h  photon.h  rund_num_generate.h
cpp/jni/: jni_impl.cpp
cpp/samples/: CMakeLists.txt  main.cpp
cpp/src/: CMakeLists.txt  biotissue.cpp  coordinate.cpp  layer.cpp  mc_method.cpp  photon.cpp  rund_num_generate.cpp
gui/: CMakeLists.txt  main.cpp
java/javagui/src/main/java/com/mcgui/javagui/: LayerParams.java  MCSimulationJNI.java
java/src/main/java/com/mcgui/javagui/: GUIController.java  HelloApplication.java  Launcher.java  LayerParams.java  MCSimulationJNI.java
java/src/main/resources/com/mcgui/javagui/: hello-view.fxml
